cmake_minimum_required(VERSION 3.5)
project(pcl_visualizer_viewports)
find_package(PCL 1.14 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS} include)
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
file(GLOB SRC_FILES "src/*.cpp")
add_executable(main ${SRC_FILES})
target_link_libraries(main ${PCL_LIBRARIES})
